chore: tinkering around with templating

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block content %}
-<p class="text-lg text-green-600">hi {{ name }} :)</p>
+<p class="text-primary">{{ name }} says hi :)</p>
 {% endblock %}
