--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,20 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://unpkg.com/htmx.org@1.9.10"
-            integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <title>Index</title>
+    <!-- TODO: add to repo -->
+    <script src="https://unpkg.com/htmx.org@1.9.10" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block head %}{% endblock %}
+
+    <!-- Styles -->
+    <link rel="stylesheet" type="text/css" href="/public/styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="/public/styles/base.css">
+
+    <!-- Overridable head info -->
+    {% block head %}
+    <title>Index</title>
+    {% endblock %}
+
 </head>
 <body>
 <div id="content">
