--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<p class="text-primary">{{ name }} says hi :)</p>
+<div class="border-dashed border-2 border-sky-500">
+  <button>{{ name }} says hi :)</button>
+</div>
 {% endblock %}
