--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="/public/styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="/public/styles/base.css">
+    <link rel="stylesheet" type="text/css" href="/public/styles/tailwind.css">
 
     <!-- Overridable head info -->
     {% block head %}
