--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -5,7 +5,5 @@
 {% endblock %}
 
 {% block content %}
-<div class="border-dashed border-2 border-sky-500">
-  <button>{{ name }} says hi :)</button>
-</div>
+<p class="text-slate-100">Hey {{ name }}</p>
 {% endblock %}
