--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<div id="content">
+<div class="bg-gray-900 h-screen w-screen">
     {% block content %}<p>Placeholder content</p>{% endblock %}
 </div>
 </body>
