--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-<p class="text-primary">{{ name }} says hi :)</p>
+<p class="text-slate-100">Hey {{ name }}</p>
 {% endblock %}
