--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -16,9 +16,9 @@
 
 </head>
 <body>
-<div class="bg-zinc-950 h-screen w-screen">
-  <div class="min-w-full mx-auto md:px-20">
-    <div class="min-w-full mx-auto bg-zinc-900 min-h-screen border-x-[1px] border-zinc-800 shadow-xl">
+<div class="bg-matrix-950 h-screen w-screen">
+  <div class="min-w-full md:px-20">
+    <div class="min-w-full bg-matrix-900 min-h-screen border-x-[1px] border-zinc-800 shadow-xl max-w-7xl">
       {% block content %}<p>Placeholder content</p>{% endblock %}
     </div>
   <div>
