--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<div class="bg-matrix-950 h-screen w-screen flex justify-center items-center overflow-hidden">
+<div class="bg-matrix-950 h-screen w-screen flex justify-center items-center overflow-x-hidden">
   <div class="min-w-[1200px] max-w-[1200px]">
     <div class="min-w-full bg-matrix-900 min-h-screen border-x-[1px] border-zinc-800 shadow-xl">
       <main>
