--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 
+<!-- ------ -->
 <!-- Header -->
+<!-- ------ -->
 {% block head %}
 <title>Ryan Brink</title>
 {% endblock %}
 
+<!-- ------- -->
 <!-- Content -->
+<!-- ------- -->
 {% block content %}
 <!-- Avatar -->
 <div class="ml-16 pt-24">
@@ -27,18 +31,23 @@
 <!-- Profiles -->
 <div class="ml-16 pt-8">
   {% for profile in profiles %}
-  <img class="inline-block mx-2 h-24 w-24 rounded-full delay-100 ease-in-out blur-xxs hover:blur-none hover:animate-pulse" src="{{ profile.image_src }}" alt="GitHub"/>
+  <img class="inline-block mx-2 h-24 w-24 rounded-full delay-100 ease-in-out hover:blur-none hover:animate-pulse" src="{{ profile.image_src }}" alt="GitHub"/>
   {% endfor %}
 </div>
 
 <!-- Avatars -->
-<div class="pt-8 overflow-visible">
-  <div class="-my-4 flex justify-center gap-6 py-4 sm:gap-8">
+<div class="mt-8 overflow-visible">
+  <div class="flex justify-center gap-6 py-4 sm:gap-8">
     {% for character in characters %}
     <div class="relative aspect-[9/10] w-44 flex-none overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-800 sm:w-72 sm:rounded-2xl {{ character.rotation }}">
       <img class="" src="{{ character.image_src }}"/>
     </div>
     {% endfor %}
   </div>
+</div>
+
+<!-- Posts and Work -->
+<div class="border-2 border-sky-500 sm:px-8 mt-12 md:mt-14">
+hey
 </div>
 {% endblock %}
