--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -47,7 +47,5 @@
 </div>
 
 <!-- Posts and Work -->
-<div class="border-2 border-sky-500 sm:px-8 mt-12 md:mt-14">
-hey
-</div>
+<!-- TODO -->
 {% endblock %}
