--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -16,10 +16,12 @@
 
 </head>
 <body>
-<div class="bg-zinc-950 h-screen w-screen">
-  <div class="min-w-full mx-auto md:px-20">
-    <div class="min-w-full mx-auto bg-zinc-900 min-h-screen border-x-[1px] border-zinc-800 shadow-xl">
-      {% block content %}<p>Placeholder content</p>{% endblock %}
+<div class="bg-matrix-950 h-screen w-screen flex justify-center items-center overflow-x-hidden">
+  <div class="min-w-[1200px] max-w-[1200px]">
+    <div class="min-w-full bg-matrix-900 min-h-screen border-x-[1px] border-zinc-800 shadow-xl">
+      <main>
+        {% block content %}<p>Placeholder content</p>{% endblock %}
+      </main>
     </div>
   <div>
 </div>
