--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,19 @@
 <!-- ------ -->
 {% block head %}
 <title>Ryan Brink</title>
+<script>
+const exampleSocket = new WebSocket(
+  "wss://localhost:8000/api/hot-reload",
+);
+
+exampleSocket.onopen = (event) => {
+  exampleSocket.send("Here's some text that the server is urgently awaiting!");
+};
+
+exampleSocket.onmessage = (event) => {
+  console.log(event.data);
+};
+</script>
 {% endblock %}
 
 <!-- ------- -->
