--- a/input.css
+++ b/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "HelloKetta";
+  src: url("/public/fonts/hello-ketta.ttf");
+}
