--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,9 @@
 </head>
 
 <body>
-  {% include "fragments/navbar.html" %}
-  <div class="bg-matrix-950 h-screen w-screen flex justify-center items-center overflow-x-hidden">
+  <div class="h-screen w-screen flex justify-center items-center overflow-x-hidden">
     <div class="min-w-[1200px] max-w-[1200px]">
-      <div class="min-w-full bg-matrix-900 min-h-screen border-x-[1px] border-zinc-800 shadow-xl">
+      <div class="min-w-full min-h-screen border-x-[1px] shadow-xl">
         <main>
           {% block content %}<p>Placeholder content</p>{% endblock %}
         </main>
