chore: add favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
   <!-- Styles -->
   <link rel="stylesheet" type="text/css" href="/public/styles/tailwind.css">
 
+  <!-- Favicon -->
+  <link rel="icon" href="/public/images/cowboy-hat.png" type="image/x-icon">
+
   <!-- Overridable head info -->
   {% block head %}
   <title>Index</title>
