--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 <!-- ------- -->
 {% block content %}
 
-<p class="font-helloKetta text-5xl text-center pt-10">{{ name.first }} {{ name.last}}</p>
-<p class="font-helloKetta text-3xl text-center pt-4">{{ description }}</p>
+<p class="text-5xl text-center pt-10">{{ name.first }} {{ name.last}}</p>
+<p class="text-3xl text-center pt-4">{{ description }}</p>
 
 {% endblock %}
