--- a/templates/base.html
+++ b/templates/base.html
@@ -6,18 +6,12 @@
   <script src="https://unpkg.com/htmx.org@1.9.10" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- Styles -->
   <link rel="stylesheet" type="text/css" href="/public/styles/tailwind.css">
-
   <!-- Favicon -->
   <link rel="icon" href="/public/images/cowboy-hat.png" type="image/x-icon">
-
   <!-- Overridable head info -->
-  {% block head %}
-  <title>Index</title>
-  {% endblock %}
-
+  {% block head %}<title>Index</title>{% endblock %}
 </head>
 
 <body>
@@ -28,8 +22,7 @@
           {% block content %}<p>Placeholder content</p>{% endblock %}
         </main>
       </div>
-      <div>
-      </div>
+      <div></div>
 </body>
 
 </html>
