--- a/templates/posts.html
+++ b/templates/posts.html
@@ -4,7 +4,7 @@
 <!-- Header -->
 <!-- ------ -->
 {% block head %}
-<title>{{ name.first }} {{ name.last }}</title>
+<title>Posts</title>
 {% endblock %}
 
 <!-- ------- -->
@@ -12,9 +12,6 @@
 <!-- ------- -->
 {% block content %}
 {% include "blocks/navbar.html" %}
-<div>
-<p class="text-6xl text-center pt-10 text-wrap">Cyberspace Cowboy</p>
-<p class="text-4xl text-center pt-4 text-wrap">{{ description }}</p>
-<div>
+<p class="text-6xl text-center pt-10 text-wrap">Articles will go here</p>
 
 {% endblock %}
