feat: implement sse for page reload

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
   <!-- TODO: add to repo -->
   <script src="https://unpkg.com/htmx.org@2.0.1" crossorigin="anonymous"></script>
+  <script src="/public/scripts/sse.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Styles -->
