chore: add home to navbar

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,10 @@
 {% block content %}
 {% include "blocks/navbar.html" %}
 <div>
-<p class="text-6xl text-center pt-10 text-wrap">Cyberspace Cowboy</p>
-<p class="text-4xl text-center pt-4 text-wrap">{{ description }}</p>
+  <p class="text-6xl text-center pt-10 text-wrap">Cyberspace Cowboy</p>
+  <p class="text-4xl text-center pt-4 text-wrap">{{ description }}</p>
+
+  <p class="text-4xl text-center pt-4 text-wrap"> I want quotes to dynamically load here from database</p>
 <div>
 
 {% endblock %}
