--- a/templates/blocks/navbar.html
+++ b/templates/blocks/navbar.html
@@ -1,4 +1,13 @@
-<div class="grid grid-cols-3 gap-4 content-start pt-4">
+<!-- TODO: Would be nice if this would be dynamic based on active page -->
+<div class="grid grid-cols-4 gap-4 content-start pt-4">
+  <div class="flex justify-center">
+    <a href="/" class="text-3xl cursor-pointer no-underline text-inherit relative group">
+      Home
+      <span
+        class="absolute left-0 right-0 bottom-0 h-px bg-current origin-left transform scale-x-0 transition-transform ease-out duration-200 group-hover:scale-x-100"></span>
+    </a>
+  </div>
+
   <div class="flex justify-center">
     <a href="/posts" class="text-3xl cursor-pointer no-underline text-inherit relative group">
       Posts
