--- a/templates/home.html
+++ b/templates/home.html
@@ -13,14 +13,16 @@
 {% block content %}
 <div class="flex flex-col min-h-screen">
   {% include "blocks/navbar.html" %}
-  <div class="flex-1 flex flex-col">
-    <div class="flex-none">
-      <p class="text-6xl text-center pt-10 text-wrap">{{ title }}</p>
-      <p class="text-4xl text-center pt-4 text-wrap">{{ description }}</p>
+  <main class="flex-grow flex flex-col items-center justify-center px-4">
+    <div class="max-w-4xl w-full text-center">
+      <h1 class="text-6xl mb-4">{{ title }}</h1>
+      <p class="text-4xl mb-12">{{ description }}</p>
+      <figure class="inline-block relative">
+        <blockquote class="text-4xl italic relative z-10 px-8">
+          {{ quote }}
+        </blockquote>
+      </figure>
     </div>
-    <div class="flex-1 flex items-center justify-center">
-      <p class="text-4xl text-center text-wrap">{{ quote }}</p>
-    </div>
-  </div>
+  </main>
 </div>
 {% endblock %}
