fix: change background color

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
 </head>
 
 <body>
-  <div class="h-screen w-screen flex justify-center items-center overflow-x-hidden">
+  <div class="h-screen w-screen flex justify-center items-center overflow-x-hidden bg-legal-pad">
     <div class="min-w-[1200px] max-w-[1200px]">
-      <div class="min-w-full min-h-screen border-x-[1px] shadow-xl">
+      <div class="min-w-full min-h-screen border-x-[1px] border-gray-700 shadow-l">
         <main>
           {% block content %}<p>Placeholder content</p>{% endblock %}
         </main>
