--- a/templates/blocks/navbar.html
+++ b/templates/blocks/navbar.html
@@ -1,32 +1,8 @@
-<!-- TODO: Would be nice if this would be dynamic based on active page -->
-<div class="grid grid-cols-4 gap-4 content-start pt-10">
-  <div class="flex justify-center">
-    <a href="/" class="text-3xl cursor-pointer no-underline text-inherit relative group">
-      Home
-      <span
-        class="absolute left-0 right-0 bottom-0 h-px bg-current origin-left transform scale-x-0 transition-transform ease-out duration-200 group-hover:scale-x-100"></span>
-    </a>
-  </div>
-
-  <div class="flex justify-center">
-    <a href="/posts" class="text-3xl cursor-pointer no-underline text-inherit relative group">
-      Posts
-      <span
-        class="absolute left-0 right-0 bottom-0 h-px bg-current origin-left transform scale-x-0 transition-transform ease-out duration-200 group-hover:scale-x-100"></span>
-    </a>
-  </div>
-  <div class="flex justify-center">
-    <a href="/projects" class="text-3xl cursor-pointer no-underline text-inherit relative group">
-      Projects
-      <span
-        class="absolute left-0 right-0 bottom-0 h-px bg-current origin-left transform scale-x-0 transition-transform ease-out duration-200 group-hover:scale-x-100"></span>
-    </a>
-  </div>
-  <div class="flex justify-center">
-    <a href="/photos" class="text-3xl cursor-pointer no-underline text-inherit relative group">
-      Photos
-      <span
-        class="absolute left-0 right-0 bottom-0 h-px bg-current origin-left transform scale-x-0 transition-transform ease-out duration-200 group-hover:scale-x-100"></span>
-    </a>
-  </div>
-</div>
+<header class="mb-16">
+    <nav class="font-handwritten text-lg space-x-6 sm:space-x-8 text-terra-600">
+        <a href="/" class="hover:text-terra-800">~</a>
+        <a href="/notes" class="hover:text-terra-800">notes</a>
+        <a href="/projects" class="hover:text-terra-800">projects</a>
+        <a href="/about" class="hover:text-terra-800">about</a>
+    </nav>
+</header>
